[gd_scene load_steps=33 format=3 uid="uid://civ6o0pdiqoww"]

[ext_resource type="Script" path="res://script/player/player.gd" id="1_tpxmx"]
[ext_resource type="Texture2D" uid="uid://2dvdwa1inupv" path="res://asset/sprite/player/boat-kelvinlessIdle.png" id="2_sbq5q"]
[ext_resource type="PackedScene" uid="uid://bx1y1r6tmvlqx" path="res://scene/player/fishingLure.tscn" id="3_iht85"]
[ext_resource type="Texture2D" uid="uid://drw066dtvmybp" path="res://asset/sprite/player/boat-kelvinlesssMoving1.png" id="3_xes3d"]
[ext_resource type="Texture2D" uid="uid://dcnn6k1lm3dp3" path="res://asset/sprite/player/boat-kelvinlessMoving2.png" id="4_kt7dt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_10w5p"]
radius = 0.707046

[sub_resource type="AtlasTexture" id="AtlasTexture_peejh"]
atlas = ExtResource("2_sbq5q")
region = Rect2(0, 2631, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrq3e"]
atlas = ExtResource("2_sbq5q")
region = Rect2(1117, 0, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6v68"]
atlas = ExtResource("2_sbq5q")
region = Rect2(0, 0, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbfdo"]
atlas = ExtResource("2_sbq5q")
region = Rect2(0, 1754, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwx1a"]
atlas = ExtResource("2_sbq5q")
region = Rect2(0, 877, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nhct"]
atlas = ExtResource("2_sbq5q")
region = Rect2(1117, 877, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_02ya1"]
atlas = ExtResource("2_sbq5q")
region = Rect2(1117, 1754, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgjf4"]
atlas = ExtResource("2_sbq5q")
region = Rect2(1117, 2631, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj3mv"]
atlas = ExtResource("3_xes3d")
region = Rect2(0, 2631, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_0syrd"]
atlas = ExtResource("4_kt7dt")
region = Rect2(0, 2631, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn1tv"]
atlas = ExtResource("3_xes3d")
region = Rect2(1117, 0, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_qix8e"]
atlas = ExtResource("4_kt7dt")
region = Rect2(1117, 0, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_hij83"]
atlas = ExtResource("3_xes3d")
region = Rect2(0, 0, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_b68ld"]
atlas = ExtResource("4_kt7dt")
region = Rect2(0, 0, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2mll"]
atlas = ExtResource("3_xes3d")
region = Rect2(0, 1754, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_13xq8"]
atlas = ExtResource("4_kt7dt")
region = Rect2(0, 1754, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwgqp"]
atlas = ExtResource("3_xes3d")
region = Rect2(0, 877, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_steai"]
atlas = ExtResource("4_kt7dt")
region = Rect2(0, 877, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_icdm6"]
atlas = ExtResource("3_xes3d")
region = Rect2(1117, 877, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1ehx"]
atlas = ExtResource("4_kt7dt")
region = Rect2(1117, 877, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0w4i"]
atlas = ExtResource("3_xes3d")
region = Rect2(1117, 1754, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5dnc"]
atlas = ExtResource("4_kt7dt")
region = Rect2(1117, 1754, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_o66ge"]
atlas = ExtResource("4_kt7dt")
region = Rect2(1117, 2631, 1117, 877)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkd4h"]
atlas = ExtResource("3_xes3d")
region = Rect2(1117, 2631, 1117, 877)

[sub_resource type="SpriteFrames" id="SpriteFrames_y5is7"]
animations = [{
"frames": [],
"loop": true,
"name": &"aimingE",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"aimingN",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"aimingNE",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"aimingNW",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"aimingS",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"aimingSE",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"aimingSW",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"aimingW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_peejh")
}],
"loop": true,
"name": &"idleE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrq3e")
}],
"loop": true,
"name": &"idleN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6v68")
}],
"loop": true,
"name": &"idleNE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbfdo")
}],
"loop": true,
"name": &"idleNW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwx1a")
}],
"loop": true,
"name": &"idleS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nhct")
}],
"loop": true,
"name": &"idleSE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02ya1")
}],
"loop": true,
"name": &"idleSW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgjf4")
}],
"loop": true,
"name": &"idleW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj3mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0syrd")
}],
"loop": true,
"name": &"sailingE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn1tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qix8e")
}],
"loop": true,
"name": &"sailingN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hij83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b68ld")
}],
"loop": true,
"name": &"sailingNE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2mll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13xq8")
}],
"loop": true,
"name": &"sailingNW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwgqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_steai")
}],
"loop": true,
"name": &"sailingS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icdm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1ehx")
}],
"loop": true,
"name": &"sailingSE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0w4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5dnc")
}],
"loop": true,
"name": &"sailingSW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o66ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkd4h")
}],
"loop": true,
"name": &"sailingW",
"speed": 5.0
}]

[sub_resource type="CylinderMesh" id="CylinderMesh_d7t3l"]
top_radius = 5.0
bottom_radius = 5.0
height = 0.5

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_tpxmx")

[node name="playerCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1.26993, 0, 0, 0, 1.26993, 0, 0, 0, 1.26993, 0, 0, 0)
shape = SubResource("SphereShape3D_10w5p")

[node name="playerSprite" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
billboard = 1
sprite_frames = SubResource("SpriteFrames_y5is7")
animation = &"aimingNW"

[node name="fishingRing" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false

[node name="accuracyRing" type="MeshInstance3D" parent="fishingRing"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.25)
mesh = SubResource("CylinderMesh_d7t3l")

[node name="fishingLure" parent="." node_paths=PackedStringArray("fishingRodTip") instance=ExtResource("3_iht85")]
unique_name_in_owner = true
visible = false
fishingRodTip = NodePath("..")

[node name="fishingRodTipMarker" type="Node3D" parent="."]
